--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,9 +50,8 @@ flutter:
 
 
   # To add assets to your application, add an assets section, like this:
-#  assets:
-##   - images/ehsan.png
-#   - images/heart.png
+  assets:
+   - images/ehsan.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
