--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   intl: ^0.17.0
   splashscreen: ^1.3.5
   favorite_button: ^0.0.3
+  getwidget: ^1.0.10
   dio: ^3.0.10
   flutter:
     sdk: flutter
@@ -35,6 +36,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
 
 dev_dependencies:
   flutter_test:
